2006-06-13  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Dap/MassStorage/MassStorageDap.cs: If usb.vendor doesn't
	exist fall back to info.vendor, and translate "Vendor" (James Stembridge,
	BGO #344803).  Use different HAL property to get a better device name.

2006-06-13  Aaron Bockover  <aaron@abock.org>

	* src/RemotePlayer.cs: Ensure a null string is not returned (BGO #344774)

2006-06-12  Aaron Bockover  <aaron@abock.org>

	* src/Banshee.Base/SourceManager.cs: Proxy Updated events of child
	sources through SourceManager.Updated (Denis Washington, BGO #343120)

2006-06-12  Aaron Bockover  <aaron@abock.org>

	* src/SourceView.cs: Added BeginRenameSource to make a source's row
	become editable and focused; made UpdateRow internal as it's only used
	by the row renderer

	* src/PlayerInterface.cs: Use SourceView.BeginRenameSource for renaming
	instead of a dialog when the source rename action is invoked

2006-06-12  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Dap/Ipod/IpodDap.cs:
	* src/Banshee.Dap/Njb/NjbDap.cs: Updated to work with changes to Dap.cs,
	specifically overriding AddTrack and calling OnTrackAdded.

2006-06-12  James Stembridge  <jstembridge@gmail.com>

	* src/Banshee.Base/Dap/DapCore.cs: Include all volumes when performing
	initial scan for DAP devices, not just those that are children of
	devices tagged by hal with portable_audio_player

	* src/Banshee.Dap/MassStorage/MassStorageDap.cs: Check for duplicates
	when adding a song to the device; if the volume for a new device isn't 
	yet available from VFS, wait for it; don't initialize Gnome VFS if it's 
	already been initialized; accept devices with a file .is_audio_player
	in the root

2006-06-12  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Base/Makefile.am: add QueuedOperationManager.cs.

	* src/Banshee.Base/QueuedOperationManager.cs: New file, allows for generic
	asynchronous events like copying files to a USB DAP, etc.
